--- a/ui/dashboard/src/app/@routes/task/task.sass
+++ b/ui/dashboard/src/app/@routes/task/task.sass
@@ -14,7 +14,6 @@ lib-utask-box
 .header
   display: flex
   flex-direction: row
-  margin-bottom: 15px
   .title
     flex: 1
   .actions
@@ -22,6 +21,9 @@ lib-utask-box
       margin-left: 5px
     nz-button-group
       margin-left: 20px
+
+.task-description
+  margin-top: 15px
 
 .steps-viewer
   overflow: auto
