ui: fix graph height

--- a/ui/dashboard/projects/utask-lib/src/lib/@components/stepslist/stepslist.sass
+++ b/ui/dashboard/projects/utask-lib/src/lib/@components/stepslist/stepslist.sass
@@ -1,6 +1,10 @@
 :host
   display: block
 
+div
+  overflow-y: auto
+  height: 100%
+
 lib-utask-box
   [app-box-header]
     nz-button-group
@@ -8,3 +12,4 @@ lib-utask-box
 
 nz-select
     width: 100%
+    margin-top: 15px
