--- a/ui/dashboard/src/app/@routes/task/task.sass
+++ b/ui/dashboard/src/app/@routes/task/task.sass
@@ -73,7 +73,11 @@ lib-utask-box
 
 lib-utask-steps-list
   margin-bottom: 15px
+  height: 400px
+  display: flex
+  flex-direction: column
 
 lib-utask-steps-viewer
-  height: 400px
+  height: 100%
+  min-height: 400px
 
