--- a/ui/dashboard/src/app/@routes/task/task.html
+++ b/ui/dashboard/src/app/@routes/task/task.html
@@ -8,11 +8,9 @@
         </div>
         <div class="actions">
             Autorefresh (5s)
-            <nz-switch [(ngModel)]="autorefresh.actif" [nzDisabled]="!autorefresh.enable"
-                (ngModelChange)="autorefresh.hasChanged = true"></nz-switch>
+            <nz-switch [(ngModel)]="autorefresh.actif" [nzDisabled]="!autorefresh.enable" (ngModelChange)="autorefresh.hasChanged = true"></nz-switch>
             <nz-button-group>
-                <button nz-button (click)="loadTask();" title="Refresh tasks"
-                    [disabled]="loaders.task || loaders.resolution"><i nz-icon
+                <button nz-button (click)="loadTask();" title="Refresh tasks" [disabled]="loaders.task || loaders.resolution"><i nz-icon
                         [nzType]="loaders.task ? 'loading' : 'sync'"></i>Refresh</button>
             </nz-button-group>
         </div>
@@ -36,12 +34,10 @@
     </nz-descriptions>
 
     <!-- Result box -->
-    <lib-utask-box [header]="{openable: true, init: display.result, class: 'primary'}"
-        *ngIf="task.result && task.resolution">
+    <lib-utask-box [header]="{openable: true, init: display.result, class: 'primary'}" *ngIf="task.result && task.resolution">
         <div app-box-header>Result</div>
         <div app-box-content>
-            <lib-utask-editor [ngModel]="JSON.stringify(task.result, null, 2)" ngDefaultControl
-                [ngModelOptions]="{standalone: true}" [config]="editorConfigResult">
+            <lib-utask-editor [ngModel]="JSON.stringify(task.result, null, 2)" ngDefaultControl [ngModelOptions]="{standalone: true}" [config]="editorConfigResult">
             </lib-utask-editor>
         </div>
     </lib-utask-box>
@@ -51,19 +47,15 @@
         <div app-box-header>
             Request - {{task.id}}
             <nz-button-group nzSize="small">
-                <button nz-button nzType="primary" title="View as code"
-                    (click)="previewTask(); $event.stopPropagation();"><i nz-icon nzType="file-text"></i></button>
-                <button nz-button nzType="primary" title="Edit the task"
-                    (click)="editRequest(task); $event.stopPropagation();"><i nz-icon nzType="edit"></i></button>
-                <button nz-button nzType="primary" title="Delete the task"
-                    (click)="deleteTask(task.id); $event.stopPropagation();"><i nz-icon nzType="delete"></i></button>
+                <button nz-button nzType="primary" title="View as code" (click)="previewTask(); $event.stopPropagation();"><i nz-icon nzType="file-text"></i></button>
+                <button nz-button nzType="primary" title="Edit the task" (click)="editRequest(task); $event.stopPropagation();"><i nz-icon nzType="edit"></i></button>
+                <button nz-button nzType="primary" title="Delete the task" (click)="deleteTask(task.id); $event.stopPropagation();"><i nz-icon nzType="delete"></i></button>
             </nz-button-group>
         </div>
         <div app-box-content>
             <nz-descriptions *ngIf="task.input" nzBordered [nzSize]="'small'" [nzColumn]="1">
                 <nz-descriptions-item nzTitle="Template">
-                    <a [routerLink]="'/template/'+task.template_name" title="Template {{task.template_name}}"
-                        *ngIf="meta.user_is_admin">
+                    <a [routerLink]="'/template/'+task.template_name" title="Template {{task.template_name}}" *ngIf="meta.user_is_admin">
                         {{task.template_name}}
                     </a>
                     <span *ngIf="!meta.user_is_admin">{{task.template_name}}</span>
@@ -79,10 +71,8 @@
                     </table>
                 </nz-descriptions-item>
                 <nz-descriptions-item nzTitle="Informations">
-                    Created by {{task.requester_username}} <abbr
-                        title="{{task.created | date : 'yyyy/MM/dd HH:mm'}}"><em>{{task.created | utaskFromNow}}</em></abbr>
-                    <span
-                        *ngIf="task.created != task.last_activity || task.requester_username != task.resolver_username">
+                    Created by {{task.requester_username}} <abbr title="{{task.created | date : 'yyyy/MM/dd HH:mm'}}"><em>{{task.created | utaskFromNow}}</em></abbr>
+                    <span *ngIf="task.created != task.last_activity || task.requester_username != task.resolver_username">
                         and
                         updated by {{task.resolver_username}} <abbr
                             title="{{task.last_activity | date : 'yyyy/MM/dd HH:mm'}}"><em>{{task.last_activity | utaskFromNow}}</em></abbr></span>
@@ -92,8 +82,7 @@
     </lib-utask-box>
 
     <!-- Execution box -->
-    <lib-utask-box [header]="{openable: true, init: display.execution, class: 'primary'}"
-        *ngIf="resolution && resolution.steps">
+    <lib-utask-box [header]="{openable: true, init: display.execution, class: 'primary'}" *ngIf="resolution && resolution.steps">
         <div app-box-header>
             Execution -
             <small>{{resolution.id}}</small> -
@@ -104,8 +93,7 @@
                         nzType="caret-right"></i></button>
                 <button nz-button nzType="primary" title="Cancel" (click)="cancelResolution(resolution)"><i nz-icon
                         nzType="stop"></i></button>
-                <button nz-button nz-dropdown [nzDropdownMenu]="menu" [nzPlacement]="'bottomRight'" nzType="primary"
-                    (click)="$event.stopPropagation()">More</button>
+                <button nz-button nz-dropdown [nzDropdownMenu]="menu" [nzPlacement]="'bottomRight'" nzType="primary" (click)="$event.stopPropagation()">More</button>
             </nz-button-group>
             <nz-dropdown-menu #menu="nzDropdownMenu">
                 <ul nz-menu>
@@ -124,10 +112,6 @@
         <div app-box-content>
             <div nz-row [nzGutter]="16">
                 <div nz-col [nzSpan]="12">
-                    <h3>Steps</h3>
-                    <lib-utask-steps-list *ngIf="resolution.steps" [resolution]="resolution"
-                        [selectedStep]="selectedStep">
-                    </lib-utask-steps-list>
                     <nz-descriptions nzBordered [nzSize]="'small'" [nzColumn]="1">
                         <nz-descriptions-item nzTitle="Execution instance">
                             #{{resolution.instance_id}} resolved by {{resolution.resolver_username}}
@@ -142,10 +126,13 @@
                             {{resolution.run_count}} / {{resolution.run_max}}
                         </nz-descriptions-item>
                     </nz-descriptions>
+                    <lib-utask-steps-list *ngIf="resolution.steps" [resolution]="resolution" [selectedStep]="selectedStep">
+                    </lib-utask-steps-list>
                 </div>
-                <lib-utask-steps-viewer nz-col [nzSpan]="12" [resolution]="resolution"
-                    (select)="selectStepFromViewer($event)">
-                </lib-utask-steps-viewer>
+                <div nz-col [nzSpan]="12">
+                    <lib-utask-steps-viewer [resolution]="resolution" (select)="selectStepFromViewer($event)">
+                    </lib-utask-steps-viewer>
+                </div>
             </div>
         </div>
     </lib-utask-box>
@@ -157,14 +144,12 @@
                 Resolve this task
             </div>
             <div app-box-content>
-                <lib-utask-inputs-form *ngIf="template" [formGroup]="validateResolveForm"
-                    [inputs]="template.resolver_inputs">
+                <lib-utask-inputs-form *ngIf="template" [formGroup]="validateResolveForm" [inputs]="template.resolver_inputs">
                 </lib-utask-inputs-form>
                 <form nz-form [formGroup]="validateResolveForm" (ngSubmit)="resolveTask()">
                     <nz-form-item nz-row class="register-area">
                         <nz-form-control [nzSpan]="14" [nzOffset]="template.resolver_inputs ? 6 : 1">
-                            <button nz-button nzType="primary" [disabled]="!validateResolveForm.valid"
-                                [nzLoading]="loaders.resolveTask">Resolve</button>
+                            <button nz-button nzType="primary" [disabled]="!validateResolveForm.valid" [nzLoading]="loaders.resolveTask">Resolve</button>
                         </nz-form-control>
                     </nz-form-item>
                 </form>
@@ -187,8 +172,7 @@
                     </nz-form-item>
                     <nz-form-item nz-row class="register-area">
                         <nz-form-control [nzSpan]="14" [nzOffset]="template.resolver_inputs ? 6 : 1">
-                            <button nz-button nzType="danger" [disabled]="!validateRejectForm.valid"
-                                [nzLoading]="loaders.rejectTask">Reject</button>
+                            <button nz-button nzType="danger" [disabled]="!validateRejectForm.valid" [nzLoading]="loaders.rejectTask">Reject</button>
                         </nz-form-control>
                     </nz-form-item>
                 </form>
@@ -216,13 +200,11 @@
     <!-- Comments box -->
     <lib-utask-box [header]="{openable: true, init: display.comments, class: 'primary'}">
         <div app-box-header>
-            Comments - <span class="badge"
-                [ngClass]="{'badge-warning': task.comments.length > 0, 'badge-secondary': !task.comments || task.comments.length === 0}">{{task.comments.length}}</span>
+            Comments - <span class="badge" [ngClass]="{'badge-warning': task.comments.length > 0, 'badge-secondary': !task.comments || task.comments.length === 0}">{{task.comments.length}}</span>
             <span *ngIf="loaders.task || loaders.addComment">&nbsp;<i class="fas fa-spinner fa-spin"></i></span>
         </div>
         <div app-box-content>
-            <nz-list *ngIf="task.comments && task.comments.length" [nzDataSource]="task.comments"
-                [nzRenderItem]="comment" [nzItemLayout]="'horizontal'">
+            <nz-list *ngIf="task.comments && task.comments.length" [nzDataSource]="task.comments" [nzRenderItem]="comment" [nzItemLayout]="'horizontal'">
                 <ng-template #comment let-comment>
                     <nz-comment [nzAuthor]="comment.username" [nzDatetime]="comment.created | utaskFromNow">
                         <nz-avatar nz-comment-avatar [nzText]="comment.username[0].toUpperCase()"></nz-avatar>
@@ -239,8 +221,7 @@
                         <textarea [(ngModel)]="comment.content" nz-input [nzAutosize]="{ minRows: 2 }"></textarea>
                     </nz-form-item>
                     <nz-form-item>
-                        <button nz-button nzType="primary" [nzLoading]="loaders.addComment"
-                            [disabled]="!comment.content" (click)="addComment()">
+                        <button nz-button nzType="primary" [nzLoading]="loaders.addComment" [disabled]="!comment.content" (click)="addComment()">
                             Add Comment
                         </button>
                     </nz-form-item>
