--- a/ui/dashboard/src/app/@routes/task/task.sass
+++ b/ui/dashboard/src/app/@routes/task/task.sass
@@ -81,3 +81,16 @@ lib-utask-steps-viewer
   height: 100%
   min-height: 400px
 
+.resolution_state
+  &_WONTFIX, &_CANCELLED, &_PAUSED
+    background: $color-warning !important
+    color: white !important
+  &_SERVER_ERROR, &_ERROR, &_BLOCKED_MAXRETRIES, &_BLOCKED, &_BLOCKED_BADREQUEST, &_BLOCKED_FATAL
+    background: $color-danger !important
+    color: white !important
+  &_DONE
+    background: $color-success !important
+    color: white !important
+  &_TODO, &_RUNNING
+    background: $color-primary !important
+    color: white !important
