--- a/ui/dashboard/projects/utask-lib/src/lib/@components/editor/editor.sass
+++ b/ui/dashboard/projects/utask-lib/src/lib/@components/editor/editor.sass
@@ -3,3 +3,11 @@
 	width: 100%
 	height: 100%
 	overflow-y: auto
+	display: flex
+	flex-direction: column
+
+nz-code-editor
+	flex: 1
+	height: 100%
+	::ng-deep > .monaco-editor
+		height: 100%
