refactor(ui): improve scroll in code editor

--- a/ui/dashboard/projects/utask-lib/src/lib/@components/editor/editor.sass
+++ b/ui/dashboard/projects/utask-lib/src/lib/@components/editor/editor.sass
@@ -1,13 +1,3 @@
 :host
 	display: block
-	width: 100%
-	height: 100%
-	overflow-y: auto
-	display: flex
-	flex-direction: column
-
-nz-code-editor
-	flex: 1
-	height: 100%
-	::ng-deep > .monaco-editor
-		height: 100%
+	overflow: hidden
