refactor(ui): fix menu and deps

--- a/ui/dashboard/src/app/@routes/base/base.scss
+++ b/ui/dashboard/src/app/@routes/base/base.scss
@@ -34,7 +34,9 @@ nz-header {
 [nz-menu] {
   flex: 1;
   line-height: 64px;
-  display: inline-block;
+  height: 100%;
+  overflow: auto;
+  display: flex;
 
   ::ng-deep {
     .ant-menu-item:focus {
