refactor: move routes to lib

--- a/ui/dashboard/projects/utask-lib/src/lib/@routes/task/task.sass
+++ b/ui/dashboard/projects/utask-lib/src/lib/@routes/task/task.sass
@@ -1,4 +1,8 @@
-@import "~src/styles/colors.sass"
+$color-text: #262626
+$color-warning: #fd7e14
+$color-danger: #dc3545
+$color-success: #28a745
+$color-primary: #007bff
 
 :host
   display: flex
