--- a/ui/dashboard/projects/utask-lib/src/lib/@routes/templates/templates.html
+++ b/ui/dashboard/projects/utask-lib/src/lib/@routes/templates/templates.html
@@ -11,7 +11,7 @@
     <tr *ngFor="let item of virtualTable.data">
       <td>{{item.name}}</td>
       <td nzEllipsis title="{{item.description}}">{{item.description}}</td>
-      <td><a nz-button nzType="link" [routerLink]="'/template/'+item.name">View details</a></td>
+      <td><a nz-button nzType="link" [routerLink]="[uiBaseUrl, 'template', item.name]">View details</a></td>
     </tr>
   </tbody>
 </nz-table>
