fix: template filter width

--- a/ui/dashboard/projects/utask-lib/src/lib/@routes/tasks/tasks.sass
+++ b/ui/dashboard/projects/utask-lib/src/lib/@routes/tasks/tasks.sass
@@ -3,9 +3,14 @@
   display: flex
   flex-direction: column
 
-lib-utask-input-tags
-  flex: 1
-  overflow: hidden
+nz-form-item
+  width: 100%
+  display: flex
+  flex-direction: row
+
+  nz-form-control
+    flex: 1
+    overflow: hidden
 
 lib-utask-tasks-list
   flex: 1
