fix(ui): dedicate function page, avoid yaml/json conversion

--- a/ui/dashboard/projects/utask-lib/src/lib/@components/step-node/step-node.sass
+++ b/ui/dashboard/projects/utask-lib/src/lib/@components/step-node/step-node.sass
@@ -18,6 +18,9 @@
 .step-blue
     background: #32acff
     color: white
+.step-orange
+    background: #ff9803
+    color: white
 .step-grey
     background: #F0F0F0
     color: black
