--- a/ui/dashboard/projects/utask-lib/src/lib/@components/steps-viewer/steps-viewer.sass
+++ b/ui/dashboard/projects/utask-lib/src/lib/@components/steps-viewer/steps-viewer.sass
@@ -34,9 +34,9 @@ button
             fill: #a0da57
     g.edgePath.TO_RETRY
         > path
-            stroke: #32acff
+            stroke: #ff9803
         marker > path
-            fill: #32acff
+            fill: #ff9803
     g.edgePath.RUNNING
         > path
             stroke: #32acff
@@ -54,7 +54,7 @@ button
             fill: #32acff
     g.edgePath.CLIENT_ERROR
         > path
-            stroke: #ff9803
+            stroke: #f5e8d7
         marker > path
             fill: #ff9803
     g.edgePath.PRUNE
