refactor(ui): change steps green color to darker one
Signed-off-by: Thomas Bétrancourt <thomas@betrancourt.net>

--- a/ui/dashboard/projects/utask-lib/src/lib/@components/step-node/step-node.sass
+++ b/ui/dashboard/projects/utask-lib/src/lib/@components/step-node/step-node.sass
@@ -13,7 +13,7 @@
         text-align: center
 
 .step-green
-    background: #a0da57
+    background: #28a745
     color: white
 .step-blue
     background: #32acff
