--- a/ui/dashboard/projects/utask-lib/src/lib/@components/steps-viewer/steps-viewer.sass
+++ b/ui/dashboard/projects/utask-lib/src/lib/@components/steps-viewer/steps-viewer.sass
@@ -29,9 +29,9 @@ button
             fill: black
     g.edgePath.DONE
         > path
-            stroke: #a0da57
+            stroke: #28a745
         marker > path
-            fill: #a0da57
+            fill: #28a745
     g.edgePath.TO_RETRY
         > path
             stroke: #32acff
