--- a/ui/editor/src/app/components/stepsviewer.html
+++ b/ui/editor/src/app/components/stepsviewer.html
@@ -29,7 +29,7 @@
         </pattern>
         <pattern id="shape_green" patternUnits="userSpaceOnUse" width="1" height="1" patternTransform="rotate(45)">
           <line x1="0" y="0" x2="10" y2="10" stroke="
-                    #a0da57" stroke-width="10" opacity="1" />
+                    #28a745" stroke-width="10" opacity="1" />
         </pattern>
         <pattern id="shape_orange" patternUnits="userSpaceOnUse" width="9.5" height="9.5"
           patternTransform="rotate(120)">
