feat(ui): fix some style issues

--- a/ui/dashboard/projects/utask-lib/src/lib/@routes/task/task.sass
+++ b/ui/dashboard/projects/utask-lib/src/lib/@routes/task/task.sass
@@ -14,12 +14,15 @@ lib-utask-box
   [app-box-header]
     nz-button-group
       float: right
+  [app-box-content]
+    nz-form-item:last-child
+      margin-bottom: 5px
 
 nz-page-header-extra
   nz-switch
-    margin-left: 5px
-  nz-button-group
-    margin-left: 20px
+    margin: 0 10px
+  [nz-button]
+    margin: 0
 
 .task-description
   margin-top: 15px
