fix(ui): improve task page style
Signed-off-by: richardlt <richard.le.terrier@gmail.com>

--- a/ui/dashboard/projects/utask-lib/src/lib/@components/stepslist/stepslist.sass
+++ b/ui/dashboard/projects/utask-lib/src/lib/@components/stepslist/stepslist.sass
@@ -1,15 +1,18 @@
 :host
-  display: block
+  display: flex
+  flex-direction: column
 
-div
-  overflow-y: auto
-  height: 100%
-
-lib-utask-box
-  [app-box-header]
-    nz-button-group
-      float: right
-
-nz-select
+  nz-select
     width: 100%
     margin-top: 15px
+
+  .list
+    overflow-y: auto
+    flex: 1
+
+    lib-utask-box
+      [app-box-header]
+        nz-button-group
+          float: right
+
+  
