--- a/ui/dashboard/src/app/@routes/not-found/not-found.html
+++ b/ui/dashboard/src/app/@routes/not-found/not-found.html
@@ -1,5 +1,5 @@
 <nz-result nzStatus="info" nzTitle="404" nzSubTitle="Sorry, the page you visited does not exist.">
 	<div nz-result-extra>
-		<button nz-button nzType="primary" routerLink="/">Back Home</button>
+		<button type="button" nz-button nzType="primary" routerLink="/">Back Home</button>
 	</div>
 </nz-result>
