dashboard(fix): perf task view

--- a/ui/dashboard/projects/utask-lib/src/lib/@components/stepslist/stepslist.sass
+++ b/ui/dashboard/projects/utask-lib/src/lib/@components/stepslist/stepslist.sass
@@ -4,15 +4,15 @@
 
   nz-select
     width: 100%
-    margin-top: 15px
+    margin-top: 10px
 
   .list
     overflow-y: auto
+    margin-top: 10px
     flex: 1
-
+    tr:hover td
+      color: #333
     lib-utask-box
       [app-box-header]
         nz-button-group
           float: right
-
-  
