replace dagre-d3 by ant-graph

--- a/ui/dashboard/projects/utask-lib/src/lib/@components/box/box.sass
+++ b/ui/dashboard/projects/utask-lib/src/lib/@components/box/box.sass
@@ -60,3 +60,6 @@ $color-warning: #fd7e14
     ::ng-deep
         .ant-collapse-content
             border-color: $color-warning
+
+.box .header
+    display: inline-block
