--- a/ui/dashboard/projects/utask-lib/src/lib/@components/step-node/step-node.sass
+++ b/ui/dashboard/projects/utask-lib/src/lib/@components/step-node/step-node.sass
@@ -1,15 +1,14 @@
 .step
-    min-width: 360px
-    height: 100px
+    height: 40px
     display: block
-    padding: 20px 32px!important
-    position: relative
+    padding: 4px 4px!important
+    width: 100%
     color: #333
     background: #F0F0F0
     .title
         overflow: hidden
         text-overflow: ellipsis
-        font-size: 36px
+        font-size: 18px
         text-align: center
 
 .step-green
