fix: display HTTP error info

--- a/ui/dashboard/projects/utask-lib/src/lib/@components/box/box.sass
+++ b/ui/dashboard/projects/utask-lib/src/lib/@components/box/box.sass
@@ -61,5 +61,6 @@ $color-warning: #fd7e14
         .ant-collapse-content
             border-color: $color-warning
 
-.box .header
+.header
     display: inline-block
+    
