--- a/ui/dashboard/projects/utask-lib/src/lib/@components/stepslist/stepslist.sass
+++ b/ui/dashboard/projects/utask-lib/src/lib/@components/stepslist/stepslist.sass
@@ -10,7 +10,7 @@
     overflow-y: auto
     margin-top: 10px
     flex: 1
-    tr:hover td
+    nz-list-item:hover
       color: #333
     lib-utask-box
       [app-box-header]
