--- a/ui/dashboard/projects/utask-lib/src/lib/@components/steps-viewer/steps-viewer.sass
+++ b/ui/dashboard/projects/utask-lib/src/lib/@components/steps-viewer/steps-viewer.sass
@@ -4,13 +4,11 @@
     height: 100%
     position: relative
 
-div
-    height: 100%
-
 nz-graph
     width: 100%
     height: 100%
     display: block
+    background-color: inherit
 
 .graph-node
     cursor: pointer
